src/test/ui/consts/min_const_fn/min_const_fn_fn_ptr.stderr
error: function pointers in const fn are unstable
  --> $DIR/min_const_fn_fn_ptr.rs:11:5
   |
LL |     x.0.field;
   |     ^^^^^^^^^

error: function pointers in const fn are unstable
  --> $DIR/min_const_fn_fn_ptr.rs:14:59
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasPtr { field }) }
   |                                                           ^^^^^

error: aborting due to 2 previous errors

